# iron_oxide

./: Cargo.toml  old.rs
font/: mojangles.fef  std1.fef2
spv/: atlas_texture.frag.spv  atlas_texture.vert.spv  basic.frag.spv  basic.vert.spv  bitmap.frag.spv  passthrough.vert.spv  post.frag.spv  shader.frag.spv  shader.vert.spv
src/: lib.rs  main.rs
src/collections/: fixed_vec.rs  matrix.rs  mod.rs  vec3d.rs
src/graphics/: asset_manager.rs  buffer.rs  buffer_manager.rs  camera.rs  font_instance.rs  formats.rs  image.rs  material.rs  memory_manager.rs  mod.rs  oxinstance.rs  pipeline.rs  platform.rs  ressource_manager.rs  shader_modul.rs  single_time_commands.rs  swapchain.rs  texture_atlas.rs  vertex_description.rs  vertex_ui.rs  vk_base.rs
src/io/: byte_reader.rs  mod.rs
src/net/: http_request.rs  https.rs  mod.rs  web_socket.rs
src/physics/: collision.rs  cube.rs  mod.rs  rigitbody.rs  system.rs
src/physics2d/: mod.rs  rect.rs  system.rs
src/primitives/: date.rs  matrix4.rs  mod.rs  point.rs  vec2.rs  vec3.rs  vec4.rs
src/rand/: hash.rs  mod.rs
src/security/: mod.rs
src/security/encryptions/: mod.rs  uncreative.rs
src/serial/: mod.rs  prefixed_read.rs  prefixed_write.rs  read.rs  write.rs
src/ui/: absolute.rs  absolute_layout.rs  build_context.rs  builder.rs  building.rs  button-old.rs  button.rs  callback.rs  container.rs  draw_data.rs  element.rs  element_build_context.rs  events.rs  font.rs  font_pipeline.rs  image.rs  interaction.rs  layout_inline.rs  material.rs  mod.rs  overflow.rs  raw_ui_element.rs  rendermode.rs  ressource_manager.rs  scroll_panel.rs  selection.rs  style.rs  system.rs  text.rs  text_input.rs  text_layout.rs  texts.rs  ticking.rs  type.rs  ui.rs  ui_element.rs  ui_events.rs  ui_pipeline.rs  ui_ref.rs  ui_state.rs  (+4 more)
src/ui/materials/: basic.rs  material.rs  mod.rs  single_image.rs  system.rs  vertex_layouts.rs
src/ui/test/: mod.rs  text.rs
src/ui/tests/: basic_renderer.rs  mod.rs  test_env.rs  text.rs
