[package]
name = "iron_oxide"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "fat"
debug-assertions = false

[dependencies]
sha1_smol = {version = "1.0.1", optional = true}
base64 = {version = "0.22.0", optional = true}
ash = {version = "0.38.0", optional = true}
ash-window = {version = "0.13.0", optional = true}
cgmath = {version = "0.18.0", optional = true}
png = {version = "0.18.0", optional = true}
zip = {version = "6.0.0", optional = true}
rand = "0.9.2"

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30.12", features = ["android-game-activity"], optional = true}

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = { version = "0.30.12", optional = true }

[features]
default = ["vulkan"]
vulkan = ["ash", "ash-window", "cgmath", "winit", "png"]
net = ["zip", "base64", "sha1_smol"]
linked = ["ash/linked"]