[package]
name = "iron_oxide"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1_smol = {version = "1.0.1", optional = true}
base64 = {version = "0.22.0", optional = true}
ash = {version = "0.38.0", default-features = false, features = ["debug", "std"], optional = true}
png = {version = "0.18.0", optional = true}
zip = {version = "7.0.0", optional = true}
rand = "0.9.2"
bitflags = "2.10.0"

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30.12", features = ["android-game-activity"], optional = true}
ndk = { version = "0.9.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.30.12", default-features = false, features = ["rwh_06", "wayland", "wayland-csd-adwaita"], optional = true }

[target.'cfg(all(not(target_os = "android"), not(target_os = "linux")))'.dependencies]
winit = { version = "0.30.12", optional = true }

[features]
default = ["vulkan"]
vulkan = ["ash", "winit", "png", "ndk"]
x11 = ["winit/x11"]
net = ["zip", "base64", "sha1_smol"]
loaded = ["ash/loaded"]
linked = ["ash/linked"]